# bluetooth-dmm-rust

./: Cargo.toml  README.md
btdmm_comm/: Cargo.toml
btdmm_comm/src/: device.rs  lib.rs  parser.rs
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/ui/: appwindow.slint
