[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.5"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies.btdmm_comm]
path = "../btdmm_comm"
